force-app/main/default/objects/Treatment__c/Treatment__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter Starter] Stores details about a treatment provided to an animal.</description>
    <label>Treatment</label>
    <nameField>
        <displayFormat>TREAT{00000}</displayFormat>
        <label>Treatment Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>