force-app/main/default/objects/Treatment__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The related condition which is being treated</inlineHelpText>
    <label>Condition</label>
    <referenceTo>Condition__c</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>