force-app/main/default/objects/Treatment__c/fields/Date_Time_of_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Treatment__c</fullName>
    <inlineHelpText>Date and Time the animal received the treatment or when the treatment is planned.</inlineHelpText>
    <label>Date/Time of Treatment</label>
    <type>DateTime</type>
</CustomField>