force-app/main/default/objects/Treatment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of the treatment received or planned.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>