force-app/main/default/objects/Treatment__c/fields/Treatment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Comments__c</fullName>
    <inlineHelpText>Add any comments related to this specific treatment</inlineHelpText>
    <label>Treatment Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>