force-app/main/default/objects/Treatment__c/fields/Treatment_Given_By__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Given_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Given By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Treatments Given</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>