force-app/main/default/objects/Treatment__c/fields/Treatment_Status__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Status__c</fullName>
    <label>Treatment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Given - See Comment</fullName>
            </value>
            <value>
                <fullName>Given</fullName>
            </value>
            <value>
                <fullName>Not Given</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>