force-app/main/default/objects/Treatment__c/fields/Treatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type__c</fullName>
    <label>Treatment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicine</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Vaccination</fullName>
            </value>
            <value>
                <fullName>Physio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>